--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Arquivos temporários e de teste
+test_encoding.py
+*.tmp
+*.temp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
